<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_toSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toSystemMessage"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/btn_toApk"/>

    <Button
        android:id="@+id/btn_toApk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toApkMessageByPM"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintTop_toBottomOf="@id/btn_toSystem"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_toApk2"/>

    <Button
        android:id="@+id/btn_toApk2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/toApkMessageByAM"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintTop_toBottomOf="@id/btn_toApk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>